--- a/ProjectSuatuHari/Views/Story.storyboard
+++ b/ProjectSuatuHari/Views/Story.storyboard
@@ -400,7 +400,7 @@
                                 <rect key="frame" x="1121" y="798" width="150" height="158"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="scenejerapahpromptnew" translatesAutoresizingMaskIntoConstraints="NO" id="VOM-nU-lgq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="prompttextjerapah" translatesAutoresizingMaskIntoConstraints="NO" id="VOM-nU-lgq">
                                 <rect key="frame" x="85" y="0.0" width="1134" height="212"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -701,6 +701,7 @@
         <image name="circle" catalog="system" width="128" height="121"/>
         <image name="kerjabagus2" width="1066" height="836"/>
         <image name="lanjut" width="313" height="92"/>
+        <image name="prompttextjerapah" width="1199" height="230"/>
         <image name="scene1" width="5692" height="4242"/>
         <image name="scene1promptnew" width="1199" height="230"/>
         <image name="scene2" width="5692" height="4242"/>
@@ -714,7 +715,6 @@
         <image name="scene6prompt" width="1199" height="230"/>
         <image name="scene7" width="5692" height="4243"/>
         <image name="scene7prompt" width="1199" height="230"/>
-        <image name="scenejerapahpromptnew" width="1199" height="230"/>
         <image name="scopecoklat" width="239" height="238"/>
         <image name="scopemerah" width="239" height="238"/>
         <image name="textjerapahbawah2" width="1241" height="228"/>
