--- a/ProjectSuatuHari/Views/Story.storyboard
+++ b/ProjectSuatuHari/Views/Story.storyboard
@@ -580,10 +580,20 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.99215686319999996" green="0.38823530080000002" blue="0.4196078479" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="it7-8e-gFB">
+                                <rect key="frame" x="129" y="835" width="196" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="xmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uue-nY-2Sg">
                                 <rect key="frame" x="735" y="835" width="196" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.99215686319999996" green="0.38823530080000002" blue="0.4196078479" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checkmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gPt-XW-3SE">
+                                <rect key="frame" x="1055" y="835" width="196" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="f99-cz-l8w"/>
@@ -592,6 +602,8 @@
                     <navigationItem key="navigationItem" id="a7K-5l-k55"/>
                     <connections>
                         <outlet property="Prompt" destination="30I-IY-NU7" id="lft-aQ-Adz"/>
+                        <outlet property="checkmarkcoklat" destination="gPt-XW-3SE" id="WxI-74-bRa"/>
+                        <outlet property="checkmarkmerah" destination="it7-8e-gFB" id="WDv-42-tJQ"/>
                         <outlet property="scopecokelat" destination="RYQ-72-XCK" id="alB-oA-sf2"/>
                         <outlet property="scopemerah" destination="5GH-Dz-pBJ" id="iPM-NS-gHg"/>
                         <outlet property="xmarkorange" destination="uue-nY-2Sg" id="bEe-hT-bcc"/>
@@ -701,6 +713,7 @@
         <image name="arrow.left.square" catalog="system" width="128" height="114"/>
         <image name="arrow.right.square" catalog="system" width="128" height="114"/>
         <image name="chatbubblenew" width="400" height="234"/>
+        <image name="checkmark" catalog="system" width="128" height="114"/>
         <image name="circle" catalog="system" width="128" height="121"/>
         <image name="lanjut" width="313" height="92"/>
         <image name="prompttextjerapah" width="1199" height="230"/>
@@ -727,6 +740,9 @@
         </systemColor>
         <systemColor name="systemCyanColor">
             <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
