--- a/ProjectSuatuHari/Views/Main.storyboard
+++ b/ProjectSuatuHari/Views/Main.storyboard
@@ -186,30 +186,30 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cy9-bS-LMW">
-                                <rect key="frame" x="249" y="272" width="946" height="506"/>
+                                <rect key="frame" x="249" y="210" width="946" height="580"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PYD-rH-xKP">
-                                    <size key="itemSize" width="886" height="430"/>
+                                    <size key="itemSize" width="894" height="532"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="HomeCardCollectionViewCell" id="rAz-AA-L3T" customClass="HomeCardCollectionViewCell" customModule="ProjectSuatuHari" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="38" width="886" height="430"/>
+                                        <rect key="frame" x="0.0" y="24" width="894" height="532"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="tQA-0U-KBV">
-                                            <rect key="frame" x="0.0" y="0.0" width="886" height="430"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="894" height="532"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8GV-Eu-du0">
-                                                    <rect key="frame" x="135" y="4" width="616" height="422"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8GV-Eu-du0">
+                                                    <rect key="frame" x="18" y="15" width="859" height="503"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="886" height="430"/>
+                                        <size key="customSize" width="894" height="532"/>
                                         <connections>
                                             <outlet property="homecardImage" destination="8GV-Eu-du0" id="Ehm-nb-dm3"/>
                                             <segue destination="Vkz-0P-dBv" kind="show" id="DJN-xY-o0R"/>
